--- a/text/parts/uvod.tex
+++ b/text/parts/uvod.tex
@@ -1,6 +1,6 @@
 \chapter*{Úvod}
-\markright{}
 \addcontentsline{toc}{chapter}{Úvod}
+\markboth{}{}
 Kosmické záření představuje veliké riziko pro zdraví posádek vesmírných letů, a proto je potřeba ho monitorovat. To je extrémně obtížné, protože kosmické záření tvoří mnoho primárních částic s~velkým rozsahem energií a navíc závisí na řadě parametrů. Ve sluneční soustavě je tok kosmického záření např. silně ovlivňován jedenáctiletým slunečním cyklem, v~blízkosti Země záleží dále na nadmořké výšce a síle magnetického pole Země v~daném místě. 
 
 Za účelem zmonitorování prostorové distribuce dávky v~blízkém okolí Země a její závislosti na výše uvedených parametrech bylo a je organizováno mnoho experimentů, řada z~nich na Mezinárodní kosmické stanici (ISS). Jako příklad lze uvést DOSIS a na něj navazující DOSIS3D probíhající v~evropském modulu Columbus, MATROSHKA-R probíhající v~ruské části ISS, RAM probíhající v~americké části ISS a PADLES probíhající v~japonském Kibo modulu. Vzhledem k~množství parametrů, na kterých jsou naměřená data závislá, a jejich časové proměnnosti musí být měření dlouhodobá (v~řádu let). Výsledky z~těchto experimentů pomohou mj. odhadnout rizika meziplanetárních letů (např. k~Marsu) a jejich případnému snížení (např. startem letu z~takové zeměpisné délky a šířky, že obdržená dávka od záření v~blízkém okolí Země bude nejmenší). 
