--- a/text/parts/zaver.tex
+++ b/text/parts/zaver.tex
@@ -1,6 +1,6 @@
-\chapter*{Závěr}
-\markright{Závěr}
+\chapter*{Závěr}%\markright{}
 \addcontentsline{toc}{chapter}{Závěr}
+\markboth{}{}
 V~této práci byla probrána problematika kosmického záření v~blízkém okolí Země a jeho monitorování. Bylo pojednáno o~pasivních detektorech, které se využívají k~jeho detekci. Stručně jsem zmínil jejich způsob fungování a podrobně jsem rozepsal metodiku vyhodnocování detektorů používaných Oddělením dozimetrie záření Ústavu jaderné fyziky AVČR. Ve stěžejní části byly popsány experimenty DOSIS a DOSIS3D, které se zabývají stanovením prostorové distribuce dávky v~ISS modulu Columbus. Výsledky z~TLD byly konfrontovány s~daty jiných, podobných experimentů. Nakonec jsem vyhodnotil tři detektory stop TASTRAK, které byly umístěné od prosince 2015 do června 2016 v~rámci experimentu DOSIS3D v~modulu Columbus. K~tomuto účelu jsem napsal skript v~programovacím jazyce Python.
 Vyhodnocování detektorů jsem důsledně popsal. Výsledkem je vypočítaná absorbovaná dávka a dávkový ekvivalent (resp. příslušné příkony) z~každého detektoru. Pro každý detektor
 jsem dále vytvořil čtyři $\LET$ spektra -- pro počet detekovaných částic, pro diferenciální fluenci, pro dávku a~pro dávkový ekvivalent. Dávkové příkony prvního, druhého a třetího detektoru jsou $\dot{D}_1=(29\pm6)\ \mu$Gy/den, $\dot{D}_2=(27\pm5)\ \mu$Gy/den a $\dot{D}_3=(23\pm5)\ \mu$Gy/den. Příkony dávk. ekvivalentů z~odpovídajících detektorů jsou $\dot{H}_1=(470\pm90)\ \mu$Sv/den, $\dot{H}_2=(500\pm100)\ \mu$Sv/den, $\dot{H}_3=(410\pm80)\ \mu$Sv/den. Dávkové příkony z~termoluminiscenčních detektorů vycházejí zhruba o~jeden řád vyšší než $\dot{D}_{1,2,3}$. Tento rozdíl je dán necitlivostí vyhodnocených detektorů stop vůči částicím s~$\LET<10$ keV/$\mu$m, nižší účinností TLD vůči částicím s~vyšším $\LET$ a také tím, že vyhodnocené detektory stop byly leptány pouze jednou, tj. byly zobrazeny pouze některé stopy. Kosmické záření je
